Fix T47780: Icons don't update in floating panels